<resources>
    <string name="app_name">AgendaTV</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_login">activity_login</string>
    <string name="login_txt">Iniciar Sesion</string>
    <string name="login_usr">Usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_btn">Entrar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_root">RootActivity</string>
    <string name="main_btn">Cerrar Sesion</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="registro">REGISTRO</string>
    <string name="reg_usr">Nombre</string>
    <string name="reg_email">E-mail</string>
    <string name="reg_pass">Contraseña</string>
    <string name="reg_pass2">Confirmar Contraseña</string>
</resources>
